--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,5 +2,5 @@ services:
   clockwatch:
     build:
       dockerfile: Dockerfile
-
-# discord token will have to be passed in here
+    environment:
+      - DISCORD_TOKEN=${DISCORD_TOKEN}
