--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,3 +4,10 @@ services:
       dockerfile: Dockerfile
     environment:
       - DISCORD_TOKEN=${DISCORD_TOKEN}
+
+  test:
+    build:
+      dockerfile: Dockerfile
+    command: npm test
+    environment:
+      - DISCORD_TOKEN=${DISCORD_TOKEN}
