--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -17,13 +17,13 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
 
-      - name: Build Docker compose
-        run: docker-compose build
-  
+      - name: Install dependencies
+        run: npm install
+
       - name: Run tests and check branch coverage
-        run: docker-compose run test
-
-        
+        run: npm test
