--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -10,20 +10,18 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-      - name: Install dependencies
-        run: npm install
+      - name: Build Docker image
+        run: docker build . --file Dockerfile --tag clockwatch
 
-      - name: Run tests and check branch coverage
-        run: npm test
+      - name: Run tests on Docker image
+        run: docker run clockwatch npm test
