--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -21,7 +21,7 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Build Docker image
-        run: docker build . --file Dockerfile --tag clockwatch
+        run: docker build . --file Dockerfile --tag clockwatch --platform linux/arm64/v8
 
       - name: Run tests on Docker image
         run: docker run clockwatch npm test
