--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -20,13 +20,21 @@ jobs:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
         with:
-          platforms: arm64
+          platforms: linux/arm64,linux/amd64
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+        with:
+          install: true
 
-      - name: Build Docker image
-        run: docker build . --file Dockerfile --tag clockwatch --platform linux/arm64/v8
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: gdsmith1
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and push Docker image
+        run: docker buildx build --platform linux/amd64,linux/arm64/v8 -t gdsmith1/clockwatch:latest --push .
 
       - name: Run tests on Docker image
-        run: docker run clockwatch npm test
+        run: docker run --platform linux/arm64/v8 gdsmith1/clockwatch:latest npm test
