--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -10,7 +10,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  test:
+  build-and-test:
     runs-on: ubuntu-latest
 
     steps:
@@ -33,8 +33,11 @@ jobs:
           username: gdsmith1
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and push Docker image
-        run: docker buildx build --platform linux/amd64,linux/arm64/v8 -t gdsmith1/clockwatch:latest --push .
+      - name: Build Docker image
+        run: docker buildx build --platform linux/amd64,linux/arm64/v8 -t gdsmith1/clockwatch:latest .
 
       - name: Run tests on Docker image
-        run: docker run --platform linux/arm64/v8 gdsmith1/clockwatch:latest npm test
+        run: docker run gdsmith1/clockwatch:latest npm test
+
+      - name: Push Docker image
+        run: docker buildx build --platform linux/amd64,linux/arm64/v8 -t gdsmith1/clockwatch:latest --push .
