--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -34,10 +34,10 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build Docker image
-        run: docker buildx build --platform linux/amd64,linux/arm64/v8 -t gdsmith1/clockwatch:latest .
+        run: docker build -t clockwatch:latest .
 
       - name: Run tests on Docker image
-        run: docker run gdsmith1/clockwatch:latest npm test
+        run: docker run clockwatch:latest npm test
 
       - name: Push Docker image
         run: docker buildx build --platform linux/amd64,linux/arm64/v8 -t gdsmith1/clockwatch:latest --push .
