--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -27,16 +27,22 @@ jobs:
         with:
           install: true
 
-      - name: Log in to Docker Hub
+      - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
-          username: gdsmith1
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and run tests on Docker image
         run: |
           docker build --load -t clockwatch:latest .
           docker run clockwatch:latest npm test
 
-      - name: Push Docker image
-        run: docker buildx build --platform linux/amd64,linux/arm64/v8 -t gdsmith1/clockwatch:latest --push .
+      - name: Build and push image
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          push: true
+          tags: ghcr.io/${{ github.repository_owner }}/clockwatch:latest
+          platforms: linux/arm64/v8,linux/amd64
